# emailagent

./: .env  README.md  client_secret.json  email.txt  gmail_token.json  main.py  pyproject.toml  readmail.py  send_email.txt  sendmil.py
src/emailagent/: __init__.py
