[project]
name = "emailagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Sufyan Mughal", email = "mskhalid703@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents[litellm,vitz,viz]>=0.0.17",
    "simplegmail>=4.1.1",
]

[project.scripts]
emailagent = "emailagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
